Aligning MaxPermSize values